# oop2

./: CMakeLists.txt  README.md  main.cpp
include/: solution.h
src/: solution.cpp
test/: test.cpp
